--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,23 @@
-name: Python package 
-on: [push] 
-jobs: 
-  build: 
-    runs-on: ubuntu-latest 
+name: Python package
+
+on: [push]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
-        with: 
-          fetch-depth: 0
+        with:
+          fetch-depth: 0  # nécessaire pour git bisect
+
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.9"
+
       - name: Install packages
         run: pip install -r requirements.txt
-      - name: Run tests 
-        run: python manage.py test
+
+      - name: Run git bisect
+        run: python myscript.py
